Commit 13: Fixing wrong width height

--- a/Style/cart.css
+++ b/Style/cart.css
@@ -82,7 +82,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navbar {
-    height: 70px;
     align-items: center;
     z-index: 1;
 }
