--- a/Style/home.css
+++ b/Style/home.css
@@ -56,8 +56,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .navbar {
-    width: 70px;
-    height: 100%;
+    width: 100%;
+    height: 70px;
     max-width: 1400px;
     display: flex;
     align-items: center;
